modules/gdscript/tests/scripts/parser/errors/invalid_identifier_string.gd
func test():
	# Error here.
	var "yes" = "is not a valid identifier"
